--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_auth: ^4.17.9
   cloud_firestore: ^4.15.9
   flutter_dotenv: ^5.1.0
+  bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
